--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ copyright_year   = 2013
 :version = 0.035
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
+stopwords = PARAMETERIZED
 stopwords = composable
 stopwords = subclass
 stopwords = subclasses
@@ -22,3 +23,6 @@ Test::More = 0.96
 indirect = 0
 multidimensional = 0
 bareword::filehandles = 0
+
+[RemovePrereqs]
+remove = RoleNotFoundAnywhere
