--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,23 @@
 ---
-abstract: 'Composable tests with roles and Moo'
+abstract: 'Composable, reusable tests with roles and Moo'
 author:
   - 'David Golden <dagolden@cpan.org>'
 build_requires:
   Capture::Tiny: 0
   ExtUtils::MakeMaker: 0
-  File::Find: 0
   File::Spec::Functions: 0
   File::Temp: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   List::Util: 0
+  Test::More: 0
+  lib: 0
   strict: 0
   warnings: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: apache
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,16 +34,16 @@ no_index:
 provides:
   Test::Roo:
     file: lib/Test/Roo.pm
-    version: 1.000
+    version: 1.001
   Test::Roo::Class:
     file: lib/Test/Roo/Class.pm
-    version: 1.000
+    version: 1.001
   Test::Roo::Cookbook:
     file: lib/Test/Roo/Cookbook.pm
-    version: 1.000
+    version: 1.001
   Test::Roo::Role:
     file: lib/Test/Roo/Role.pm
-    version: 1.000
+    version: 1.001
 recommends:
   bareword::filehandles: 0
   indirect: 0
@@ -53,7 +56,10 @@ requires:
   perl: 5.008001
   strictures: 0
 resources:
-  bugtracker: https://github.com/dagolden/test-roo/issues
-  homepage: https://metacpan.org/release/Test-Roo
-  repository: git://github.com/dagolden/test-roo.git
-version: 1.000
+  bugtracker: https://github.com/dagolden/Test-Roo/issues
+  homepage: https://github.com/dagolden/Test-Roo
+  repository: https://github.com/dagolden/Test-Roo.git
+version: 1.001
+x_authority: cpan:DAGOLDEN
+x_contributors:
+  - 'Diab Jerius <djerius@gmail.com>'
