--- a/META.yml
+++ b/META.yml
@@ -3,19 +3,18 @@ abstract: 'Composable, reusable tests with roles and Moo'
 author:
   - 'David Golden <dagolden@cpan.org>'
 build_requires:
-  Capture::Tiny: '0'
+  Capture::Tiny: '0.12'
   ExtUtils::MakeMaker: '0'
-  File::Spec::Functions: '0'
+  File::Spec: '0'
   File::Temp: '0'
-  List::Util: '0'
+  Test::More: '0.96'
   lib: '0'
   strict: '0'
-  version: '0'
   warnings: '0'
 configure_requires:
   ExtUtils::MakeMaker: '6.17'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141170'
+generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
 license: apache
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,16 +31,16 @@ no_index:
 provides:
   Test::Roo:
     file: lib/Test/Roo.pm
-    version: '1.003'
+    version: '1.004'
   Test::Roo::Class:
     file: lib/Test/Roo/Class.pm
-    version: '1.003'
+    version: '1.004'
   Test::Roo::Cookbook:
     file: lib/Test/Roo/Cookbook.pm
-    version: '1.003'
+    version: '1.004'
   Test::Roo::Role:
     file: lib/Test/Roo/Role.pm
-    version: '1.003'
+    version: '1.004'
 recommends:
   bareword::filehandles: '0'
   indirect: '0'
@@ -57,7 +56,7 @@ resources:
   bugtracker: https://github.com/dagolden/Test-Roo/issues
   homepage: https://github.com/dagolden/Test-Roo
   repository: https://github.com/dagolden/Test-Roo.git
-version: '1.003'
+version: '1.004'
 x_authority: cpan:DAGOLDEN
 x_contributors:
   - "Arthur Axel 'fREW' Schmidt <frioux@gmail.com>"
